# claude-credit-watchdog

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
assets/claude-plugin/.claude-plugin/: plugin.json
assets/claude-plugin/hooks/: hooks.json
assets/claude-plugin/scripts/: session-start.sh  statusline.sh  stop-failure.sh
assets/launchd/: com.antaresyuan.credit-watchdog.plist
docs/: index.html
scripts/: ccwatch  ccwatch.py  install.sh  watcher.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: OverviewHeader.tsx  SessionCard.tsx  SettingsPanel.tsx
src/lib/: api.ts  types.ts
