[package]
name = "claude-credit-watchdog"
version = "0.1.0"
description = "Menu bar UI and local commands for Claude credit recovery"
authors = ["Antares Yuan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.6", features = [ "macos-private-api", "tray-icon"] }
